kubernetes/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app1
  name: app-service
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
